version/1.6/_sources/api/_autosummary/ansys.optislang.core.nodes.ParametricSystem.rst.txt
ParametricSystem
================

.. currentmodule:: ansys.optislang.core.nodes

.. autoclass:: ParametricSystem

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      ParametricSystem.assign_placeholder
      
      
      ParametricSystem.control
      
      
      ParametricSystem.create_input_slot
      
      
      ParametricSystem.create_node
      
      
      ParametricSystem.create_output_slot
      
      
      ParametricSystem.create_placeholder_from_property
      
      
      ParametricSystem.delete
      
      
      ParametricSystem.delete_children_nodes
      
      
      ParametricSystem.exists
      
      
      ParametricSystem.find_node_by_uid
      
      
      ParametricSystem.find_nodes_by_name
      
      
      ParametricSystem.get_ancestors
      
      
      ParametricSystem.get_connections
      
      
      ParametricSystem.get_execution_options
      
      
      ParametricSystem.get_hpc_licensing_forwarded_environment
      
      
      ParametricSystem.get_inner_input_slots
      
      
      ParametricSystem.get_inner_output_slots
      
      
      ParametricSystem.get_input_slot_value
      
      
      ParametricSystem.get_input_slots
      
      
      ParametricSystem.get_name
      
      
      ParametricSystem.get_nodes
      
      
      ParametricSystem.get_omdb_files
      
      
      ParametricSystem.get_output_slot_value
      
      
      ParametricSystem.get_output_slots
      
      
      ParametricSystem.get_parent
      
      
      ParametricSystem.get_parent_name
      
      
      ParametricSystem.get_properties
      
      
      ParametricSystem.get_property
      
      
      ParametricSystem.get_registered_files
      
      
      ParametricSystem.get_result_files
      
      
      ParametricSystem.get_states_ids
      
      
      ParametricSystem.get_status
      
      
      ParametricSystem.save_designs_as
      
      
      ParametricSystem.save_designs_as_csv
      
      
      ParametricSystem.save_designs_as_json
      
      
      ParametricSystem.set_execution_options
      
      
      ParametricSystem.set_name
      
      
      ParametricSystem.set_properties
      
      
      ParametricSystem.set_property
      
      
      ParametricSystem.supports
      
      
      ParametricSystem.unassign_placeholder
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ParametricSystem.criteria_manager
      ParametricSystem.design_manager
      ParametricSystem.parameter_manager
      ParametricSystem.response_manager
      ParametricSystem.type
      ParametricSystem.uid
   
   